# ChangeLog for app-text/ghostscript-afpl
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-afpl/ChangeLog,v 1.23 2004/09/29 15:33:04 lanius Exp $

  29 Sep 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-afpl-8.15.ebuild:
  fix search path

*ghostscript-afpl-8.15 (29 Sep 2004)

  29 Sep 2004; Heinrich Wendel <lanius@gentoo.org>
  +ghostscript-afpl-8.15.ebuild:
  version bump

  30 Aug 2004; David Holm <dholm@gentoo.org> ghostscript-afpl-8.14-r2.ebuild:
  Added to ~ppc.

  07 Aug 2004; Jon Hood <squinky86@gentoo.org>
  ghostscript-afpl-8.14-r1.ebuild:
  virtual/glibc -> virtual/libc

*ghostscript-afpl-8.14-r2 (11 Aug 2004)

  11 Aug 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-afpl-8.14-r2.ebuild:
  move fonts to /usr/share/fonts/ghostscript

  04 Aug 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-afpl-8.13.ebuild, ghostscript-afpl-8.14-r1.ebuild:
  add cfax device, bug #56704

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ghostscript-afpl-8.13.ebuild, ghostscript-afpl-8.14.ebuild:
  virtual/glibc -> virtual/libc

  24 Jun 2004; Dylan Carlson <absinthe@gentoo.org>
  ghostscript-afpl-8.14.ebuild:
  keywords ~amd64.

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  ghostscript-afpl-8.13.ebuild, ghostscript-afpl-8.14.ebuild:
  Fix use invocation

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  ghostscript-afpl-8.13.ebuild, ghostscript-afpl-8.14.ebuild:
  Add die following econf for bug 48950

  07 May 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-afpl-8.14.ebuild:
  stable bump

  27 Feb 2004; Heinrich Wendel <lanius@gentoo.org>
  ghostscript-afpl-8.13.ebuild, ghostscript-afpl-8.14.ebuild:
  added gtk to IUSE (bug #43098)

*ghostscript-afpl-8.14 (24 Feb 2004)

  24 Feb 2004; Heinrich Wendel <lanius@gentoo.org> 
  ghostscript-afpl-8.14.ebuild:
  version bump

  15 Jan 2004; Heinrich Wendel <lanius@gentoo.org>