@@ -1,8 +1,8 @@
-MD5 1854d4445ed6eac8c8f33d5c9583ad41 ghostscript-afpl-8.15.ebuild 3340
+MD5 cf18b00fb0865c7581d437a0b303a3a9 ghostscript-afpl-8.15.ebuild 3346
 MD5 ad66412f44cb115d55a89b71096b007b ghostscript-afpl-8.14-r2.ebuild 3571
 MD5 2dfafa5057f0bab05f33038d87fb76f9 ghostscript-afpl-8.14.ebuild 3332
 MD5 7b57dbead0a987b857a5ca047821e6bd ghostscript-afpl-8.14-r1.ebuild 3524
-MD5 a4176750fff64b6ef0d5cec1d9e87ff7 ChangeLog 2888
+MD5 90d8118adb274a206e699700901dc5b5 ChangeLog 2993
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
 MD5 550c82a660a48a76de2ecfd32c7b5a9b files/digest-ghostscript-afpl-8.14 359
 MD5 e10b8f4566648e7bc09f6b7336d74b2d files/digest-ghostscript-afpl-8.15 280
